src/App.css
:root {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #2e3035;
}

body {
    margin: 0;
    padding: 0;
    background-color: #2e3035;
}

#root{
    /* height: 100vh; */
}

#nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: rgb(23,21,68);
    background: linear-gradient(90deg, rgba(23,21,68,1) 0%, rgba(45,31,93,1) 100%);
    color: white;
    position: fixed;
    width: 100%;
}

#left-nav {
    display: flex;
    align-items: center;
    gap: 50px;
}

#right-nav {
    display:flex;
    align-items: center;
    gap: 40px;
}

#add-post {
    padding: 12px 30px;
    margin-right: 20px;
    background-color: #1bb76e;
    border-radius: 5px;
}

a:link, a:visited {
    color: white;
    text-decoration: none;
}

h1 {
    padding-left: 20px;
}


ul {
    list-style: none;
    display:flex;
    align-items: center;
    gap: 20px;
    padding-right: 20px;
}



#login-container, #signup-container, #newpost-container, #postdetail-container {
    padding-top: 90px;
    height: 50vh;
    background-color: #2e3035;
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white
}

#postdetail-container {
   display: flex;
   flex-direction: column;
   justify-content: right;
   align-items: center;
}

.img-detail {
    max-width: 500px;
}

#login-form, #signup-form, #newpost-form, #postdetail {
    display:flex;
    flex-direction: column;
    align-items: center;
    padding: 30px;

    border-radius: 5px;   
    background-color: #474a51; 
    color: white;
    box-shadow: 0 8px 6px -6px black;
}

#username-container, #email-container, #password-container, #password1-container, #password2-container,
#title-container, #image-upload-container, #caption-container {
    display:flex;
    gap: 10px;
    padding-bottom: 10px;
}

.login-signup-btn {
    color: white;
    background-color: #5c69ff;
    border: none;
    padding: 10px 30px;
}

#signup-btn {
    padding: 12px 30px;
    margin-right: 20px;
    background-color: #1bb76e;
    border-radius: 5px;
}

#logout {
    padding-right:20px;
}

#image-container {
    padding-top: 100px;
    background-color: #2e3035;
    display: grid;
    justify-content: center;
    align-items: center;

}

#image-section {            
    column-count: 5;
    column-gap: 15px;
    width: 100%;
}

.white-background, .image-card {
    border-radius: 5px; 
    
    color: white;
    width: 350px;
    page-break-inside: avoid;
}

.image-card {
    background-color: #474a51; 
    box-shadow: 0 8px 6px -6px black;
}

.white-background {
    border-radius: 8px; 
    background-color: white;
}

.homepage-img {
    height: auto;
    width: 350px;
}

.card-text {
    padding: 0px 20px 20px 20px;
}

.image-card:hover {
    opacity: .90;
}

form {
    color: white;
}

